Added dependency for ReactInputComponents instead of using relative paths

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,7 +73,7 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    entryFile: "dist/ReactInputComponentDemo/src/native/index"
+    entryFile: "dist/src/native/index"
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
