--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/react-native": "0.52.5",
     "react-base-utilities-js": "^1.0.0",
+    "react-basic-input-components": "^1.0.0",
     "react-native": "0.52.2"
   },
   "devDependencies": {
