WIP - adding navigation

--- a/android/.project
+++ b/android/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ReactInputComponentDemo</name>
-	<comment>Project ReactInputComponentDemo created by Buildship.</comment>
+	<name>ReactCustomComponentDemo</name>
+	<comment>Project ReactCustomComponentDemo created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
