--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "ReactInputComponentDemo",
-  "displayName": "ReactInputComponentDemo"
+  "name": "ReactCustomComponentDemo",
+  "displayName": "ReactCustomComponentDemo"
 }
