--- a/ios/ReactCustomComponentDemo/Info.plist
+++ b/ios/ReactCustomComponentDemo/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>ReactInputComponentDemo</string>
+	<string>ReactCustomComponentDemo</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
