--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-basic-input-components": "^1.0.0",
     "react-error-display-components": "^1.0.3",
     "react-native": "0.52.2",
-    "react-navigation": "^1.0.0-beta.27"
+    "react-navigation": "^1.0.0-beta.27",
+    "react-phone-input-components": "^1.0.0"
   },
   "devDependencies": {
     "@types/jest": "22.1.0",
